# dynamo-bench

./: .gitignore  LICENSE  README.md  compare.py  fa919feab6a_metadata.json  pyproject.toml  run.bash  run.py
.benchmarks/Linux-CPython-3.13-64bit/: 0001_baseline.json  0002_baseline.json  0003_baseline.json
results/: result_2025-9-13_25b273bfb00.csv  result_2025-9-13_72b51597820.csv  result_2025-9-16_3f6d88f04c6.csv  result_2025-9-17_fa919feab6a.csv  result_4014672b30f.csv  result_a5d9bfb1408.csv
